sample/msvc/error/c2033.cpp
// C2033.cpp
struct S {
   int *b : 1;  // C2033
};
